--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 a.relative {
 	position:  relative;
@@ -6,7 +6,6 @@ a.relative {
 }
 
 .navbar a {
-	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 18px;
+	font-family: 'Montserrat', sans-serif;
 }
 
