--- a/_layouts/default_html.html
+++ b/_layouts/default_html.html
@@ -14,7 +14,7 @@
   <body>
 
 
-	<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar py-4 sticky-top navbar-expand-lg navbar-dark bg-dark">
 	  <div class="container-fluid">
 	    <a class="navbar-brand relative" href="#">
 	    	<img src="assets/images/logo.png" alt="" width="80">
