--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 a.relative {
-	position:  relative;
-	left:  10px;
+	position:  absolute;
+	left:  50px;
 }
 
 .navbar a {
