--- a/_layouts/default_html.html
+++ b/_layouts/default_html.html
@@ -14,10 +14,10 @@
   <body>
 
 
-	<nav class="navbar py-4 sticky-top navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar py-2 sticky-top navbar-expand-lg navbar-dark bg-dark">
 	  <div class="container-fluid">
-	    <a class="navbar-brand relative" href="#">
-	    	<img src="assets/images/logo.png" alt="" width="80">
+	    <a class="navbar-brand" href="#">
+	    	<img src="assets/images/logo.png" alt="" width="80" class="img-fluid">
 	    </a>
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
