--- a/_layouts/default_html.html
+++ b/_layouts/default_html.html
@@ -16,19 +16,18 @@
 
 	<nav class="navbar py-2 sticky-top navbar-expand-lg navbar-dark bg-dark">
 	  <div class="container-fluid">
-	    <a class="navbar-brand" href="#">
-	    	<img src="assets/images/logo.png" alt="" width="80" class="img-fluid">
+	    <a class="navbar-brand" href="/">
+	    	<img src="assets/images/logo.png" alt="" width="80">
 	    </a>
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
 	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	      <ul class="navbar-nav ms-auto mb-1 mb-lg-0">
-	        <li class="nav-item"> <a class="nav-link" href="#">contact us</a> </li>
-	        <li class="nav-item"> <a class="nav-link" href="#">Contact Us</a> </li>
-	        <li class="nav-item"> <a class="nav-link" href="#">CONTACT US</a> </li>
-	        <li class="nav-item"> <a class="nav-link" href="#">contact us</a> </li>
-	        <li class="nav-item"> <a class="nav-link" href="#">contact us</a> </li>
+	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#">Contact Us</a> </li>
+	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#">Contact Me</a> </li>
+	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#">Contact You</a> </li>
+	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#">Contact Blah</a> </li>
 	      </ul>
 	    </div>
 	  </div>
