--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,38 @@ a.relative {
 	font-family: 'Montserrat', sans-serif;
 }
 
+.img-fluid {
+	max-width: 100%;
+    height: auto;
+    position: absolute;
+    top: 0;
+}
+
+#transition{
+	position: relative;
+	padding: 6px 0;
+}
+
+.nav-item{
+	padding: 10px;
+}
+
+#transition:before{
+	content:  '';
+	position:  absolute;
+	bottom: 0;
+	left: 0;
+	height:  3px;
+	width:  0%;
+	background: #34efdf;
+	transition: all 0.4s ease;
+}
+
+#transition:hover:before{
+	width: 100%;
+}
+
+.center #transition:before{
+	left:  50%;
+	transform: translateX(-50%);
+}
