--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,11 +1,11 @@
 <nav class="navbar py-2 sticky-top navbar-expand-lg navbar-dark bg-dark">
 	  <div class="container-fluid">
-	    <a class="navbar-brand zoom" href="{{ site.baseurl }}">
-	    	<img src="assets/images/logo.png" alt="" width="80">
-	    </a>
+	    <a class="navbar-brand zoom" href="{{ site.baseurl }}"><img src="assets/images/logo.png" alt="" width="80"></a>
+
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
+
 	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	      <ul class="navbar-nav ms-auto mb-1 mb-lg-0">
 	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#">Contact Us</a> </li>
@@ -14,5 +14,6 @@
 	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#">Contact Blah</a> </li>
 	      </ul>
 	    </div>
+	    
 	  </div>
 </nav>
