--- a/_layouts/default_layout.html
+++ b/_layouts/default_layout.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Humanoid Robots, HumanEd, Society, Robotics, University of Edinburgh, UOE, UofE, Tech, STEM">
+    <meta name="description" content="The Humanoid Robotics Society is an interdisciplinary group of students focused on the long-term research, development and implementation of new technologies in the field of limbs, exoskeletons, humanoid robots and bipedal movement.">
 
     <link href="assets/css/style.css" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    {% include header.html %}
+
   </head>
 
   <body>
