--- a/_layouts/default_layout.html
+++ b/_layouts/default_layout.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Humanoid Robots, HumanEd, Society, Robotics, University of Edinburgh, UOE, UofE, Tech, STEM">
-    <meta name="description" content="The Humanoid Robotics Society is an interdisciplinary group of students focused on the long-term research, development and implementation of new technologies in the field of limbs, exoskeletons, humanoid robots and bipedal movement.">
+    <meta name="description" content="The Humanoid Robotics Society is an interdisciplinary group of students focused on the long-term research, development and implementation of new technologies in the field of limbs, exoskeletons, humanoid robots and bipedal movement."
+    >
+    <meta name="author" content="HumanEd">
 
     <link href="assets/css/style.css" rel="stylesheet">
 
@@ -20,8 +22,12 @@
 
   	{% include navigation.html %}
 
+  	<h1>HHGWOLFKNELKNLKSKLDKLEKLFLNFKLWENFEKKNEKLKLKLEWRW</h1>
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    {% include footer.html %}
 
   </body>
 </html>
