--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,12 +8,12 @@
 
 	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	      <ul class="navbar-nav ms-auto mb-1 mb-lg-0">
-	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#">Contact Us</a> </li>
+	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#contact-us">Contact Us</a> </li>
 	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#">Contact Me</a> </li>
 	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#">Contact You</a> </li>
 	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#">Contact Blah</a> </li>
 	      </ul>
 	    </div>
-	    
+
 	  </div>
 </nav>
