Footer without social media

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,13 @@
 <footer class="#contact-us bg-dark">
-    <div class="container py-4">
-        <div class="line"></div>
+    <div class="container-fluid py-4">
+    	<a class="footer-img zoom" href="{{ site.baseurl }}"><img src="assets/images/logo.png" alt="" width="120"></a>
+    	<a class="footer-img zoom" href="https://www.ed.ac.uk/"><img src="assets/images/logo_uoe.png" alt="" width="120"></a>
+    	<br>
+    	<br>
+    	<h3>HumanEd - Humanoid Robotics Society</h3>
+    	<br>
+    	<p>The Humanoid Robotics Society is an interdisciplinary group of students focused<br>
+    	on the long-term research, development and implementation of new technologies in the<br>
+    	field of limbs, exoskeletons, humanoid robots and bipedal movement.</p>
     </div>
-    <img src="assets/images/logos/f_logo_RGB-Grey_1024.png" height=30px padding-left=50px>
 </footer>
