--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
+*{
+	font-family: 'Montserrat', sans-serif;
+	color: white;
+	text-align: center;
+}
+
 .navbar a {
 	font-family: 'Montserrat', sans-serif;
+	font-size: 20px;
 	color: white;
 }
 
@@ -46,4 +53,8 @@
 	height: 1px;
 	width: 100%;
 	background: grey;
+}
+
+.footer-img{
+	padding: 50px;
 }
