Footer without social media fixed

--- a/_layouts/default_layout.html
+++ b/_layouts/default_layout.html
@@ -22,7 +22,7 @@
 
   	{% include navigation.html %}
 
-  	<div="container">
+  	<div class="container">
   		<h1>HHGWOLFKNELKNLKSKLDKLEKLFLNFKLWENFEKKNEKLKLKLEWRW</h1>
   	</div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
