--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-*{
+.footer{
 	font-family: 'Montserrat', sans-serif;
 	color: white;
 	text-align: center;
