Footer without social media fixed

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="#contact-us footer bg-dark">
+<footer class="footer bg-dark">
     <div class="container-fluid py-4">
     	<a class="footer-img zoom" href="{{ site.baseurl }}"><img src="assets/images/logo.png" alt="" width="120"></a>
     	<a class="footer-img zoom" href="https://www.ed.ac.uk/"><img src="assets/images/logo_uoe.png" alt="" width="120"></a>
