--- a/_layouts/default_layout.html
+++ b/_layouts/default_layout.html
@@ -23,7 +23,7 @@
   	{% include navigation.html %}
 
   	<div class="container">
-  		<h1>HHGWOLFKNELKNLKSKLDKLEKLFLNFKLWENFEKKNEKLKLKLEWRW</h1>
+  		<h1>HHGWOLFKNELKNLKSKL</h1>
   	</div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
