--- a/_layouts/default_layout.html
+++ b/_layouts/default_layout.html
@@ -9,6 +9,9 @@
     >
     <meta name="author" content="HumanEd">
 
+    <!-- Social Media Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link href="assets/css/style.css" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
