--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,3 +58,22 @@
 	color: white;
 	text-align: center;
 }
+
+.footer a{
+	color: white;
+	text-decoration: none;
+}
+
+.footer a:hover{
+	color: #01B7FF;
+	text-decoration: none;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
