--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,8 +49,9 @@
 }
 
 .footer-img{
-	padding-top: 5px;
-	padding: 50px;
+	padding-top: 10px;
+	padding-left: 50px;
+	padding-right: 50px;
 }
 
 .footer{
