--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,22 @@
-<footer class="#contact-us footer bg-dark">
-    <div class="container-fluid py-4">
-    	<a class="footer-img zoom" href="{{ site.baseurl }}"><img src="assets/images/logo.png" alt="" width="70"></a>
-    	<a class="footer-img zoom" href="https://www.ed.ac.uk/"><img src="assets/images/logo_uoe.png" alt="" width="70"></a>
-    	<br>
-    	<br>
-    	<h5><a href="https://www.eusa.ed.ac.uk/activities/view/humaned">HumanEd - Humanoid Robotics Society</a></h5>
-    	<br>
-    	<p>The Humanoid Robotics Society is an interdisciplinary group of students focused<br>
-    	on the long-term research, development and implementation of new technologies in the<br>
-    	field of limbs, exoskeletons, humanoid robots and bipedal movement.</p>
-    	<br>
-    	<p>Email us at : <a href = "mailto: uoe.humaned@gmail.com">uoe.humaned@gmail.com</a></p>
-    	<a href="https://www.instagram.com/humanedinburgh/" class="fa fa-instagram"></a>
-		<a href="https://www.facebook.com/UoEHumanEd" class="fa fa-facebook"></a>
-		<a href="https://www.linkedin.com/company/humaned/" class="fa fa-linkedin"></a>
-		<a href="https://github.com/HumanED" class="fa fa-github"></a>
-    </div>
-</footer>
+
+<div id="contact-us">
+	<footer class="footer bg-dark">
+	    <div class="container-fluid py-4">
+	    	<a class="footer-img zoom" href="{{ site.baseurl }}"><img src="assets/images/logo.png" alt="" width="70"></a>
+	    	<a class="footer-img zoom" href="https://www.ed.ac.uk/"><img src="assets/images/logo_uoe.png" alt="" width="70"></a>
+	    	<br>
+	    	<br>
+	    	<h5><a href="https://www.eusa.ed.ac.uk/activities/view/humaned">HumanEd - Humanoid Robotics Society</a></h5>
+	    	
+	    	<p>The Humanoid Robotics Society is an interdisciplinary group of students focused<br>
+	    	on the long-term research, development and implementation of new technologies in the<br>
+	    	field of limbs, exoskeletons, humanoid robots and bipedal movement.</p>
+	    	
+	    	<p>Email us at : <a href = "mailto: uoe.humaned@gmail.com">uoe.humaned@gmail.com</a></p>
+	    	<a href="https://www.instagram.com/humanedinburgh/" class="fa fa-instagram"></a>
+			<a href="https://www.facebook.com/UoEHumanEd" class="fa fa-facebook"></a>
+			<a href="https://www.linkedin.com/company/humaned/" class="fa fa-linkedin"></a>
+			<a href="https://github.com/HumanED" class="fa fa-github"></a>
+	    </div>
+	</footer>
+</div>
