--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,8 @@
 }
 
 .fa {
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   font-size: 30px;
   width: 50px;
   text-align: center;
