Edited config file

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <div id="contact-us">
 	<footer class="footer bg-dark">
 	    <div class="container-fluid py-4">
-	    	<a class="footer-img zoom" href="{{ site.baseurl }}/"><img src="assets/images/logo.png" alt="" width="70"></a>
+	    	<a class="footer-img zoom" href="/humanEd/"><img src="assets/images/logo.png" alt="" width="70"></a>
 	    	<a class="footer-img zoom" href="https://www.ed.ac.uk/"><img src="assets/images/logo_uoe.png" alt="" width="70"></a>
 	    	<br>
 	    	<br>
