--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,5 @@
-
 <div id="contact-us">
-	<footer class="footer bg-dark">
+	<footer class="footer" style="background-color: #000000;">
 	    <div class="container-fluid py-4">
 	    	<a class="footer-img zoom" href="/humanEd/"><img src="assets/images/logo.png" alt="" width="70"></a>
 	    	<a class="footer-img zoom" href="https://www.ed.ac.uk/"><img src="assets/images/logo_uoe.png" alt="" width="70"></a>
@@ -13,10 +12,10 @@
 	    	field of limbs, exoskeletons, humanoid robots and bipedal movement.</p>
 	    	
 	    	<p>Email us at : <a href = "mailto: uoe.humaned@gmail.com">uoe.humaned@gmail.com</a></p>
-	    	<a href="https://www.instagram.com/humanedinburgh/" class="fa fa-instagram"></a>
-			<a href="https://www.facebook.com/UoEHumanEd" class="fa fa-facebook"></a>
-			<a href="https://www.linkedin.com/company/humaned/" class="fa fa-linkedin"></a>
-			<a href="https://github.com/HumanED" class="fa fa-github"></a>
+	    	<a href="https://www.instagram.com/humanedinburgh/" class="zoom fa fa-instagram"></a>
+			<a href="https://www.facebook.com/UoEHumanEd" class="fa fa-facebook zoom"></a>
+			<a href="https://www.linkedin.com/company/humaned/" class="fa fa-linkedin zoom"></a>
+			<a href="https://github.com/HumanED" class="fa fa-github zoom"></a>
 	    </div>
 	</footer>
 </div>
