Added SVG Background

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,11 +11,13 @@
 	    	on the long-term research, development and implementation of new technologies in the<br>
 	    	field of limbs, exoskeletons, humanoid robots and bipedal movement.</p>
 	    	
+	    	<p>SVG Background provided by <a target="_blank" href="https://bgjar.com">BGJar</a> </p>
 	    	<p>Email us at : <a href = "mailto: uoe.humaned@gmail.com">uoe.humaned@gmail.com</a></p>
-	    	<a href="https://www.instagram.com/humanedinburgh/" class="zoom fa fa-instagram"></a>
-			<a href="https://www.facebook.com/UoEHumanEd" class="fa fa-facebook zoom"></a>
-			<a href="https://www.linkedin.com/company/humaned/" class="fa fa-linkedin zoom"></a>
-			<a href="https://github.com/HumanED" class="fa fa-github zoom"></a>
+
+	    	<a href="https://www.instagram.com/humanedinburgh/" class="fa fa-instagram"></a>
+			<a href="https://www.facebook.com/UoEHumanEd" class="fa fa-facebook"></a>
+			<a href="https://www.linkedin.com/company/humaned/" class="fa fa-linkedin"></a>
+			<a href="https://github.com/HumanED" class="fa fa-github"></a>
 	    </div>
 	</footer>
 </div>
