--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,7 +5,7 @@
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
 
-	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	    <div class="collapse navbar-collapse">
 	      <ul class="navbar-nav ms-auto mb-1 mb-lg-0">
 	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#contact-us">contact us</a> </li>
 	      </ul>
