--- a/_layouts/default_layout.html
+++ b/_layouts/default_layout.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
 
+    <!-- Meta Characteristic -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Humanoid Robots, HumanEd, Society, Robotics, University of Edinburgh, UOE, UofE, Tech, STEM">
@@ -12,6 +13,7 @@
     <!-- Social Media Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <!-- Config CSS -->
     <link href="assets/css/style.css" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
@@ -27,7 +29,7 @@
     
   	<main> {{ content }} </main>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     {% include footer.html %}
