--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,8 +106,7 @@ body {
 	grid-template-columns: auto auto auto;
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
-	height: 100%;
-	overflow: auto;
+	overflow-x: scroll;
 }
 
 .info h4 {
