--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <div id="contact-us">
 	<footer class="footer" style="background-color: #000000;">
 	    <div class="container-fluid py-4">
-	    	<a class="footer-img zoom" href="/humanEd/"><img src="assets/images/logo.png" alt="" width="70"></a>
-	    	<a class="footer-img zoom" href="https://www.ed.ac.uk/"><img src="assets/images/logo_uoe.png" alt="" width="70"></a>
+	    	<a class="footer-img zoom" href="/humanEd/"><img src="site_assets/images/main-logos/humaned.png" alt="" width="70"></a>
+	    	<a class="footer-img zoom" href="https://www.ed.ac.uk/"><img src="site_assets/images/main-logos/uoe.png" alt="" width="70"></a>
 	    	<br>
 	    	<br>
 	    	<h5><a href="https://www.eusa.ed.ac.uk/activities/view/humaned">HumanEd - Humanoid Robotics Society</a></h5>
@@ -11,7 +11,7 @@
 	    	on the long-term research, development and implementation of new technologies in the<br>
 	    	field of limbs, exoskeletons, humanoid robots and bipedal movement.</p>
 	    	
-	    	<p>SVG Background provided by <a target="_blank" href="https://bgjar.com">BGJar</a> </p>
+	    	<p>SVG Background provided by <a target="_blank" href="https://heropatterns.com/">Hero Patterns</a> </p>
 	    	<p>Email us at : <a href = "mailto: uoe.humaned@gmail.com">uoe.humaned@gmail.com</a></p>
 
 	    	<a href="https://www.instagram.com/humanedinburgh/" class="fa fa-instagram"></a>
