--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,2 +1,2 @@
-<link rel="icon" type="image/gif/png" href="assets/images/logo.png">
+<link rel="icon" type="image/gif/png" href="site_assets/images/main-logos/humaned.png">
 <title>{{ page.title }}</title>
