--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <nav class="navbar py-1 sticky-top navbar-expand-lg navbar-dark" style="background-color: #000000;">
 	  <div class="container-fluid">
-	    <a class="navbar-brand zoom" href="/humanEd/"><img src="assets/images/logo.png" alt="" width="70"></a>
+	    <a class="navbar-brand zoom" href="/humanEd/"><img src="site_assets/images/main-logos/humaned.png" alt="" width="70"></a>
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
