Footer update color

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,13 +12,12 @@
 	    	field of limbs, exoskeletons, humanoid robots and bipedal movement.</p>
 	    	
 	    	<p>SVG Background provided by <a target="_blank" href="https://heropatterns.com/">Hero Patterns</a> </p>
-
-	    	<a href="https://www.eusa.ed.ac.uk/activities/view/humaned" class="	fa fa-graduation-cap" target="_blank"></a>
-	    	<a href="https://www.instagram.com/humanedinburgh/" class="fa fa-instagram" target="_blank"></a>
-			<a href="https://www.facebook.com/UoEHumanEd" class="fa fa-facebook" target="_blank"></a>
-			<a href="https://www.linkedin.com/company/humaned/" class="fa fa-linkedin" target="_blank"></a>
-			<a href="https://github.com/HumanED" class="fa fa-github" target="_blank"></a>
-			<a href="mailto: uoe.humaned@gmail.com" class="fa fa-envelope" target="_blank"></a>
+		    <a href="https://www.eusa.ed.ac.uk/activities/view/humaned" class="	fa fa-graduation-cap fa-2x" target="_blank"></a>
+		   	<a href="https://www.instagram.com/humanedinburgh/" class="fa fa-instagram fa-2x" target="_blank"></a>
+			<a href="https://www.facebook.com/UoEHumanEd" class="fa fa-facebook fa-2x" target="_blank"></a>
+			<a href="https://www.linkedin.com/company/humaned/" class="fa fa-linkedin fa-2x" target="_blank"></a>
+			<a href="https://github.com/HumanED" class="fa fa-github fa-2x" target="_blank"></a>
+			<a href="mailto: uoe.humaned@gmail.com" class="fa fa-envelope fa-2x" target="_blank"></a>
 	    </div>
 	</footer>
 </div>
