--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,17 @@
 <div id="contact-us">
 	<footer class="footer" style="background-color: #000000;">
 	    <div class="container-fluid py-4">
-	    	<a class="footer-img zoom" href="/humanEd/"><img src="site_assets/images/main-logos/humaned.png" alt="" width="70"></a>
-	    	<a class="footer-img zoom" href="https://www.ed.ac.uk/"><img src="site_assets/images/main-logos/uoe.png" alt="" width="70"></a>
+	    	<a class="footer-img zoom" href="/humanEd/"><img src="site_assets/images/main-logos/humaned.png" alt="" width="80"></a>
+	    	<a class=" footer-img zoom" href="https://www.ed.ac.uk/"><img class="edi" src="site_assets/images/main-logos/uoe.png" alt="" width="80"></a>
 	    	<br>
 	    	<br>
-	    	<h5><a href="https://www.eusa.ed.ac.uk/activities/view/humaned">HumanEd - Humanoid Robotics Society</a></h5>
+	    	<h5>HumanEd - Humanoid Robotics Society</h5>
 	    	
 	    	<p>The Humanoid Robotics Society is an interdisciplinary group of students focused<br>
 	    	on the long-term research, development and implementation of new technologies in the<br>
 	    	field of limbs, exoskeletons, humanoid robots and bipedal movement.</p>
-	    	
-	    	<p>SVG Background provided by <a target="_blank" href="https://heropatterns.com/">Hero Patterns</a> </p>
+
+	    	<p>SVG Background provided by <span class="attr"><a target="_blank" href="https://heropatterns.com/">Hero Patterns</a></span></p>
 		    <a href="https://www.eusa.ed.ac.uk/activities/view/humaned" class="	fa fa-graduation-cap fa-2x" target="_blank"></a>
 		   	<a href="https://www.instagram.com/humanedinburgh/" class="fa fa-instagram fa-2x" target="_blank"></a>
 			<a href="https://www.facebook.com/UoEHumanEd" class="fa fa-facebook fa-2x" target="_blank"></a>
