--- a/site_assets/css/style.css
+++ b/site_assets/css/style.css
@@ -166,38 +166,35 @@ body {
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
+  color: white;
 }
 
-.fa a:hover {
-	color: red;
-}
-
-.fa-linkedin {
+.fa-linkedin:hover {
   background: #007bb5;
   color: white;
   }
 
-.fa-instagram {
+.fa-instagram:hover {
   background: #DD2A7B;
   color: white;
 }
 
-.fa-facebook {
+.fa-facebook:hover {
   background: #3B5998;
   color: white;
 }
 
-.fa-github {
-  background: #24292F;
+.fa-github:hover {
+  background: #474747;
   color: white;
 }
 
-.fa-envelope {
+.fa-envelope:hover {
 	background: red;
 	color: white;
 }
 
-.fa-graduation-cap {
+.fa-graduation-cap:hover {
 	background: #01B3A5;
 	color: white;
 }
