--- a/site_assets/css/style.css
+++ b/site_assets/css/style.css
@@ -197,3 +197,11 @@ body {
 	background: #01B3A5;
 	color: white;
 }
+
+.team-head {
+	background: #41424C;
+	color: white;
+	top: 50%;
+	height: 300px;
+	text-align: center;
+}
