--- a/site_assets/css/style.css
+++ b/site_assets/css/style.css
@@ -26,6 +26,12 @@ body {
 	padding: 10px;
 }
 
+.navbar-center {
+	position: absolute;
+  left: 50%;
+  transform: translatex(-50%);
+}
+
 #transition{
 	position: relative;
 	padding: 6px 0;
