--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,16 +1,13 @@
-<nav class="navbar py-1 sticky-top navbar-expand-lg navbar-dark" style="background-color: #000000;">
-	  <div class="container-fluid">
-	    <a class="navbar-brand zoom" href="/humanEd/"><img src="site_assets/images/main-logos/humaned.png" alt="" width="70"></a>
-	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	      <span class="navbar-toggler-icon"></span>
-	    </button>
+<nav class="navbar py-1 navbar-expand-lg navbar-dark sticky-top" style="background-color: #000000;">
+	<a class="navbar-brand zoom" href="/humanEd/"><img src="site_assets/images/main-logos/humaned.png" alt="" width="70"></a>
+	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	</button>
 
-	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	      <ul class="navbar-nav ms-auto mb-1 mb-lg-0">
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+	    <ul class="navbar-nav ms-auto mb-1 mb-lg-0">
 	      	<li class="nav-item center"> <a class="nav-link" id="transition" href="/humanEd/team">team</a> </li>
 	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#contact-us">contact us</a> </li>
-	      </ul>
-	    </div>
-
-	  </div>
+	    </ul>
+	</div>
 </nav>
