--- a/site_assets/css/style.css
+++ b/site_assets/css/style.css
@@ -2,6 +2,10 @@
 
 /* General Style */
 
+:root {
+  --blue: #1e90ff;
+}
+
 html {
 	scroll-behavior: smooth;
 }
@@ -24,6 +28,14 @@ body {
 
 .nav-item{
 	padding: 10px;
+}
+
+.navbar-brand{
+	padding-left: 10px;
+}
+
+.nav2{
+	padding-top: 	90px;
 }
 
 .navbar-center {
@@ -68,6 +80,31 @@ body {
 }
 
 /* Teams Page - Member Cards */
+
+#team-transition{
+	position: relative;
+	padding: 6px 0;
+}
+
+#team-transition:before{
+	content:  '';
+	position:  absolute;
+	bottom: 0;
+	left: 0;
+	height:  3px;
+	width:  0%;
+	background: #d60000;
+	transition: all 0.4s ease;
+}
+
+#team-transition:hover:before{
+	width: 100%;
+}
+
+.center #team-transition:before{
+	left:  50%;
+	transform: translateX(-50%);
+}
 
 .team-container {
 	width: 225px;
@@ -127,10 +164,14 @@ body {
 }
 
 .team-grid {
-	display: grid;
-	grid-template-columns: auto auto;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  padding: 10px;
+}
+.grid-item {
+  padding: 10px;
+  font-size: 30px;
+  text-align: center;
 }
 
 .info h4 {
@@ -223,4 +264,8 @@ body {
 .fa-graduation-cap:hover {
 	background: #01B3A5;
 	color: white;
+}
+
+.secondNav{
+	padding-top: 50px;
 }
