--- a/site_assets/css/style.css
+++ b/site_assets/css/style.css
@@ -75,29 +75,46 @@ body {
 }
 
 /* Teams Page - Member Cards */
-#team-transition{
-	position: relative;
-	padding: 6px 0;
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: #2196F3;
+  padding: 10px;
+}
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
 }
 
-#team-transition:before{
-	content:  '';
-	position:  absolute;
-	bottom: 0;
-	left: 0;
-	height:  3px;
-	width:  0%;
-	background: #d60000;
-	transition: all 0.4s ease;
-}
+@media only screen and (min-width: 768px){
+	#team-transition{
+		position: relative;
+		padding: 6px 0;
+	}
 
-#team-transition:hover:before{
-	width: 100%;
-}
+	#team-transition:before{
+		content:  '';
+		position:  absolute;
+		bottom: 0;
+		left: 0;
+		height:  3px;
+		width:  0%;
+		background: #d60000;
+		transition: all 0.4s ease;
+	}
 
-.center #team-transition:before{
-	left:  50%;
-	transform: translateX(-50%);
+	#team-transition:hover:before{
+		width: 100%;
+	}
+
+	.center #team-transition:before{
+		left:  50%;
+		transform: translateX(-50%);
+	}	
 }
 
 .team-container {
@@ -141,7 +158,7 @@ body {
 	text-align: center;
 }
 
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
 	.team-header {
 		height: 360px;
 	}
