--- a/site_assets/css/style.css
+++ b/site_assets/css/style.css
@@ -90,6 +90,16 @@ body {
   text-align: center;
 }
 
+.outer-container {
+	width: 300px;
+	height: auto;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,50%);
+	overflow: hidden;
+
+}
+
 @media only screen and (min-width: 768px){
 	#team-transition{
 		position: relative;
@@ -272,6 +282,84 @@ body {
 	color: white;
 }
 
-.secondNav{
-	padding-top: 50px;
+.container1 {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 80%;
+	margin: auto;
+}
+
+.our-team {
+	background: red;
+	text-align: center;
+	overflow: hidden;
+	position: relative;
+	margin: 0px 25px;
+	padding: 30px 70px;
+	width: 30%;
+}
+
+.our-team .pic {
+	display: inline-block;
+	width: 230px;
+	height: 130px;
+	margin-bottom: 0px;
+	z-index: 1;
+	position: relative;
+}
+
+.profile {
+	margin-top: 25px;
+}
+
+.profile .img-box {
+	opacity: 1;
+	display: block;
+	position: relative;
+}
+
+.profile h2 {
+	font-size: 22px;
+	font-weight: bold;
+	margin-top: 15px;
+}
+
+.profile h3 {
+	font-size: 15px;
+	font-weight: bold;
+	margin-top: 15px;
+}
+
+.img-box::after {
+	content: "";
+	opacity: 0;
+	background-color: rgba(0, 0, 0, 0.6) ;
+	position: absolute;
+	right: 0;
+	left:  0;
+	top:  0;
+	bottom: 0;
+}
+
+.img-box ul {
+	margin: 0;
+	padding: 20px 0;
+	position: absolute;
+	z-index: 1;
+	bottom: 0;
+	display: block;
+	left:  50%;
+	transform: translateX(-50%);
+	opacity: 1;
+}
+
+.img-box ul li {
+	width: 30px;
+	height: 30px;
+	border: 1px solid #fff;
+	border-radius: 50%;
+	margin: 3px;
+	padding: 7px;
+	display: inline-block;
 }
