--- a/site_assets/css/style.css
+++ b/site_assets/css/style.css
@@ -314,52 +314,31 @@ body {
 }
 
 .profile .img-box {
-	opacity: 1;
 	display: block;
 	position: relative;
 }
 
 .profile h2 {
-	font-size: 22px;
+	font-size: 25px;
 	font-weight: bold;
-	margin-top: 15px;
+	margin-top: 20px;
 }
 
 .profile h3 {
-	font-size: 15px;
+	font-size: 18px;
 	font-weight: bold;
-	margin-top: 15px;
+	margin-top: 10px;
 }
 
-.img-box::after {
-	content: "";
-	opacity: 0;
-	background-color: rgba(0, 0, 0, 0.6) ;
-	position: absolute;
-	right: 0;
-	left:  0;
-	top:  0;
-	bottom: 0;
+.profile p {
+	font-size: 13px;
+	font-weight: bold;
 }
 
-.img-box ul {
-	margin: 0;
-	padding: 20px 0;
-	position: absolute;
-	z-index: 1;
-	bottom: 0;
-	display: block;
-	left:  50%;
-	transform: translateX(-50%);
-	opacity: 1;
+.zoom-team img{
+	transition: transform 0.5s ease;
 }
 
-.img-box ul li {
-	width: 30px;
-	height: 30px;
-	border: 1px solid #fff;
-	border-radius: 50%;
-	margin: 3px;
-	padding: 7px;
-	display: inline-block;
+.zoom-team:hover img{
+	transform:  scale(1.03);
 }
