--- a/site_assets/css/style.css
+++ b/site_assets/css/style.css
@@ -27,6 +27,11 @@ body {
 	font-size: 15px;
 }
 
+.navbar-nav li.active > a {
+  background-color: #C0C0C0;
+  color: green;
+}
+
 .nav-item{
 	padding: 10px;
 }
