--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,7 +7,7 @@
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			    <ul class="navbar-nav ms-auto mb-1 mb-lg-0">
-			    	<li class="nav-item center"> <a class="nav-link active" id="transition" href="/humanEd/team">events</a> </li>
+			    	<li class="nav-item center"> <a class="nav-link" id="transition" href="/humanEd/team">events</a> </li>
 			      	<li class="nav-item center"> <a class="nav-link" id="transition" href="/humanEd/team">team</a> </li>
 			        <li class="nav-item center"> <a class="nav-link" id="transition" href="#contact-us">contact us</a> </li>
 			    </ul>
