--- a/_layouts/default_layout.html
+++ b/_layouts/default_layout.html
@@ -10,6 +10,8 @@
     >
     <meta name="author" content="HumanEd">
 
+    <script src="site_assets/js/script.js" type="text/javascript"></script>
+
     <!-- Config CSS -->
     <link href="site_assets/css/style.css" rel="stylesheet">
 
