--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<footer class="footer" style="background-color: #000000;">
 	    <div class="container-fluid py-4">
 	    	<a class="footer-img zoom" href="/humanEd/"><img src="site_assets/images/main-logos/humaned.png" alt="" width="80"></a>
-	    	<a class=" footer-img zoom" href="https://www.ed.ac.uk/"><img class="edi" src="site_assets/images/main-logos/uoe.png" alt="" width="80"></a>
+	    	<a class=" footer-img zoom" href="https://www.ed.ac.uk/"><img class="edi-logo" src="site_assets/images/main-logos/uoe.png" alt="" width="80"></a>
 	    	<br><br>
 	    	<h5>HumanEd - Humanoid Robotics Society</h5>
 	    	
