--- a/site_assets/css/style.css
+++ b/site_assets/css/style.css
@@ -123,7 +123,7 @@ body {
 
 @media only screen and (max-width: 992px) {
 	.team-header {
-		height: 300px;
+		height: 330px;
 	}
 
 	.committee {
@@ -200,7 +200,7 @@ body {
 }
 
 .fa {
- 	padding: 20px;
+  padding: 20px;
   font-size: 70px;
   width: 70px;
   text-align: center;
@@ -240,13 +240,17 @@ body {
 }
 
 .join_us-header {
-	/*background-image: url("site_assets/images/blah.jpg");*/
-	position: relative;
+	background-image: url("site_assets/images/blah.jpg");
 	height:560px;  
-	width: 100vw; 
-	background: black;
+	width: 100%; 
+	/*background: black;
 	color: #FFFFFD;
 	font-size: 20px;
 	text-align: center;
-	overflow: hidden;
+	overflow: hidden;*/
+}
+
+.test {
+	background-image: url("site_assets/images/blah.jpg");
+	height: 200px;
 }
